<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPatientActivity"
    android:orientation="vertical"
    android:background="@drawable/registerpatientscreen">

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_register"/>

    <TextView
        android:textSize="30dp"
        android:fontFamily="@font/grandehotel"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegisterPatientTxt"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/edtName"
        android:drawableEnd="@drawable/ic_person"
        android:drawablePadding="50dp"
        android:textColor="@color/white"
        android:fontFamily="@font/thin"
        android:hint="@string/RegisterPatientName"
        android:textColorHint="@color/white"
        android:paddingHorizontal="20dp"
        android:background="@drawable/bgsolidgrey"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:inputType="text|textNoSuggestions|textCapWords"
        android:importantForAutofill="no"
        android:maxLength="25"/>

    <EditText
        android:id="@+id/edtEmail"
        android:drawableEnd="@drawable/ic_email"
        android:textColor="@color/white"
        android:fontFamily="@font/thin"
        android:hint="@string/RegisterPatientEmail"
        android:textColorHint="@color/white"
        android:paddingHorizontal="20dp"
        android:background="@drawable/bgsolidgrey"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:maxLength="25"
        android:inputType="text|textEmailAddress|textNoSuggestions"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/edtCpf"
        android:drawableEnd="@drawable/ic_cpf"
        android:textColor="@color/white"
        android:fontFamily="@font/thin"
        android:hint="@string/RegisterPatientCpf"
        android:textColorHint="@color/white"
        android:paddingHorizontal="20dp"
        android:background="@drawable/bgsolidgrey"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:maxLength="14"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bgsolidgrey"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <Spinner
            android:id="@+id/spnGender"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/white"/>
    </LinearLayout>

    <Button
        android:background="@drawable/bgbutton"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:text="@string/NewPatientRegister"
        android:textColor="@color/white"
        android:fontFamily="@font/thin"
        android:textSize="18sp"
        android:onClick="btnRegister"/>

</LinearLayout>