<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/homescreen"
    android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/brain"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"/>

    <Button
        android:background="@drawable/bgbutton"
        android:layout_marginTop="170dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="230dp"
        android:layout_height="65dp"
        android:text="@string/HomeBtn1"
        android:textColor="@color/white"
        android:fontFamily="@font/thin"
        android:textSize="18sp"
        android:onClick="btnRegisterPatient"/>

    <Button
        android:background="@drawable/bgbutton"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="230dp"
        android:layout_height="65dp"
        android:text="@string/HomeBtn2"
        android:textColor="@color/white"
        android:fontFamily="@font/thin"
        android:textSize="18sp"
        android:onClick="btnNewAppointment"/>

    <Button
        android:background="@drawable/bgbutton"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="230dp"
        android:layout_height="65dp"
        android:text="@string/HomeBtn3"
        android:textColor="@color/white"
        android:fontFamily="@font/thin"
        android:textSize="18sp"
        android:onClick="btnMyAppointments"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo_white"/>

</LinearLayout>